src/test/deca/context/invalid/double-declaration.deca
// Description : 
//	 test de double declaration
// Resultats :
//	 8:8: Redeclaration of the variable

{
    int x;
    int x;
}